--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "papa-chat-app",
+  "name": "papa-chat",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -14,6 +14,10 @@
     "next": "15.0.3"
   },
   "devDependencies": {
+    "typescript": "^5",
+    "@types/node": "^20",
+    "@types/react": "^18",
+    "@types/react-dom": "^18",
     "eslint": "^8",
     "eslint-config-next": "15.0.3"
   }
